--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     container_name: php_container
     restart: always
     volumes:
-      - ./backend:/var/www/html
+      - ./:/var/www/html
     ports:
       - "8080:80"
     depends_on:
